Alignment fixes

--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -1008,6 +1008,7 @@ form.login {
   label {
     width: 10em;
     font-weight: bolder;
+    text-align: $center;
   }
 
   input {
